# ED1

./: .gitignore  CMakeLists.txt  README.md  eventos.c  eventos.h  main.c  programa
executable/: main
headers/: atividades.h  checkin.h  desfazer.h  eventos.h  ordenacao.h  participantes.h
source/: atividades.c  checkin.c  desfazer.c  eventos.c  main  main.c  main1.c  main2.c  main5.c  menu_checkin.c  participantes.c  programa
